3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Prevent crossedit from stripping out 'maplore' map header field.
---
common/map.c: Add code to load/save/dump maplore information.
include/map.h: Add new maplore field to map struct.
Andreas Kirschbaum 2006-02-19

Apply patch #1433271 (code-cleanup) by Stefan Huehner: Add const and static.
---
Affected files: common/{loader.l,los.c,map.c}, include/{libproto.h,sproto.h},
plugins/cfanim/{cfanim.c,include/cfanim.h}, server/{apply.c,skill_util.c}
common/loader.c: Rebuilt.
Andreas Kirschbaum 2006-02-17

common/map.c: Modify ob_blocked() to properly handly objects with a 0
   ob->move_type.  Fixes infinite loop from random map code when trying
   to place exits.
MSW 2006-02-16

Commit forgotten file for yesterday, which have the CFAPI_INT16 define...
 include/plugin.h
 server/plugins.c
Ryo 2006-02-15

Minor bugfixes:
server/apply.c: Fix apply_transport ->contr checks to actually
  check against correct values.
server/plugins.c: Replace CFAPI_INT16 with CFAPI_INT - there is no
  declaration anyplace for CFAPI_INT16 so compiles fails.
server/swamp.c: Fix swamp code so that only objects that can be
  picked up disappear - this way, transports don't disappear into
  oblivion.
MSW 2006-02-15

Swamps don't affect DMs anymore. Also, swamps don't remove items with
FLAG_IS_FLOOR or FLAG_IS_OVERLAY_FLOOR.
 server/swamp.c
----
Fixes to plugin system. Added "SINT16" as return type.
 server/plugins.c: resistances are sint16, not int.
 plugins/cfanim/include/cfanim_proto.h: fix cf_object_get_resistance declaration.
 plugins/cfpython/cfpython_archetype.c: fix comparison function, which should return 0 or +-1.